# elden-x

./: CMakeLists.txt  README.md
include/elden-x/: chr.hpp  dl_allocator.hpp  event_flag.hpp  fe.hpp  game_man.hpp  graphics.hpp  menu_man.hpp  messages.hpp  now_loading_helper.hpp  session.hpp  singletons.hpp  singletons.inl  sound.hpp  steam_id.hpp  stl.hpp  task.hpp  task_groups.hpp  window.hpp  world_chr_man.hpp
include/elden-x/chr/: chr.hpp  chr_debug_reload.hpp  chr_er.hpp  chr_nr.hpp  chrmodules.hpp  chrset.hpp  chrspeffect.hpp  player.hpp  player_game_data.hpp  world_chr_man.hpp  world_chr_man_er.hpp  world_chr_man_nr.hpp
include/elden-x/ezstate/: ezstate.hpp  talk_commands.hpp
include/elden-x/gamedata/: game_data_man.hpp
include/elden-x/menu/: generic_list_select_dialog.hpp  grid_control.hpp  menu_man.hpp  menu_man_er.hpp  menu_man_nr.hpp  menu_window.hpp  popup_menu.hpp
include/elden-x/paramdef/: ACTIONBUTTON_PARAM_ST.hpp  AI_ANIM_TBL_PARAM.hpp  AI_ATTACK_PARAM_ST.hpp  AI_ODDS_PARAM.hpp  AI_SOUND_PARAM_ST.hpp  AI_STANDARD_INFO_BANK.hpp  ASSET_GEOMETORY_PARAM_ST.hpp  ASSET_MATERIAL_SFX_PARAM_ST.hpp  ASSET_MODEL_SFX_PARAM_ST.hpp  ATK_PARAM_ST.hpp  ATTACK_ELEMENT_CORRECT_PARAM_ST.hpp  AUTO_CREATE_ENV_SOUND_PARAM_ST.hpp  BASECHR_SELECT_MENU_PARAM_ST.hpp  BEHAVIOR_PARAM_ST.hpp  BONFIRE_WARP_PARAM_ST.hpp  BONFIRE_WARP_SUB_CATEGORY_PARAM_ST.hpp  BONFIRE_WARP_TAB_PARAM_ST.hpp  BUDDY_PARAM_ST.hpp  BUDDY_STONE_PARAM_ST.hpp  BUDGET_PARAM_ST.hpp  BULLET_CREATE_LIMIT_PARAM_ST.hpp  BULLET_PARAM_ST.hpp  CACL_CORRECT_GRAPH_ST.hpp  CAMERA_FADE_PARAM_ST.hpp  CEREMONY_PARAM_ST.hpp  CHARACTER_INIT_PARAM.hpp  CHARMAKEMENUTOP_PARAM_ST.hpp  CHARMAKEMENU_LISTITEM_PARAM_ST.hpp  CHR_ACTIVATE_CONDITION_PARAM_ST.hpp  CHR_EQUIP_MODEL_PARAM_ST.hpp  CHR_MODEL_PARAM_ST.hpp  CLEAR_COUNT_CORRECT_PARAM_ST.hpp  COMMON_SYSTEM_PARAM_ST.hpp  COOL_TIME_PARAM_ST.hpp  CS_AA_QUALITY_DETAIL.hpp  (+160 more)
src/elden-x/: game_man.cpp  messages.cpp  session.cpp  singletons.cpp  stl.cpp  task.cpp
(+14 files in other folders)
